test/compile-fail/resolution/type-existence/no-such-trait/top.rhdl
struct a<T: b> {}
enum b {}
